--- a/styles.less
+++ b/styles.less
@@ -18,6 +18,33 @@ html {
   transform: translateY(0);
 }
 body {
+  .side-menu {
+    padding: 30px;
+    padding-top: 60px;
+    position: absolute;
+    z-index: 999;
+    left: -300px; /* Начальное положение за пределами экрана */
+    width: 250px;
+    height: 100%;
+    box-sizing: border-box;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    transition: left 0.3s ease; /* Плавное появление меню */
+    background-color: rgba(0, 0, 0, 0.4);
+    ul {
+      li {
+        list-style: none;
+        margin-bottom: 10px;
+        a {
+          text-decoration: none;
+          color: #fff;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+  .side-menu.active {
+    left: 0; /* Отображение сайд меню при активации */
+  }
   .container {
     margin: 0 auto;
     margin-left: 10%;
@@ -38,6 +65,21 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
     position: absolute;
     box-sizing: border-box;
+    z-index: 999;
+    .burger-icon {
+      position: absolute;
+      right: 55px;
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      .line {
+        width: 25px;
+        height: 3px;
+        background-color: rgb(255, 255, 255);
+        margin: 3px 0;
+        transition: transform 0.3s ease; /* Плавное изменение анимации */
+      }
+    }
 
     ul {
       margin: 0 auto;
@@ -95,6 +137,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     .main_content {
       display: flex;
       flex-direction: row;
@@ -118,11 +161,12 @@ body {
       align-items: center;
       width: 60px; // Устанавливаем размер контейнера
       height: 60px; // Устанавливаем размер контейнера
-      margin-top: 30px;
+
+      position: absolute;
+      bottom: 30px;
       cursor: pointer;
       animation: moveUpDown 2s infinite;
 
-      position: relative;
       transition: transform 1s ease;
       &:hover {
         transform: scale(2);
@@ -281,8 +325,8 @@ body {
         padding: 20px;
         padding-left: 30px;
         padding-bottom: 5px;
-        max-width: 30%;
-        min-height: 555px;
+        max-width: 32%;
+        min-height: 580px;
         img {
           border-radius: 50%;
           width: 90px;
@@ -413,6 +457,7 @@ body {
       }
       .reverse {
         flex-direction: row-reverse;
+        top: -60px;
         img {
           margin-right: 0;
           margin-left: 20px;
@@ -511,5 +556,247 @@ body {
   }
   45% {
     transform: translateY(-5px); // Двигаем вверх на 5 пикселей
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .type {
+    h3 {
+      line-height: 1.1 !important;
+      font-size: 18px !important;
+    }
+    li {
+      margin-bottom: 8px !important;
+      font-size: 14px;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+  }
+  .main {
+    position: relative;
+    .main_content {
+      h1 {
+        font-size: 30px !important;
+      }
+      div {
+        font-size: 20px !important;
+      }
+    }
+    .circle-arrow-container {
+      position: absolute !important;
+      margin-top: 0 !important;
+      bottom: 30px;
+    }
+  }
+  .reverse {
+    top: 0 !important;
+    margin-top: 15px;
+  }
+  .personInfo {
+    max-width: 60% !important;
+  }
+  form {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
+    h3 {
+      font-size: 32px;
+      margin-bottom: 20px;
+      text-transform: uppercase;
+    }
+    p {
+      width: 65% !important;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    input {
+      border-radius: 0;
+      border: solid 1px gray;
+      padding: 10px;
+      font-size: 14px;
+      width: 65% !important;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+    }
+    textarea {
+      width: 65% !important;
+    }
+    button {
+      padding: 18px;
+      border-radius: 30px;
+      font-size: 20px;
+      background-color: #182347;
+      border: none;
+      color: #fff;
+
+      cursor: pointer;
+      transition: transform 1s ease;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 880px) {
+  header {
+    font-size: 14px !important;
+    padding-left: 10% !important;
+    padding-right: 10% !important;
+  }
+  .about {
+    height: auto !important;
+    .about_image {
+      max-width: 50% !important;
+    }
+    .about_text {
+      margin-bottom: 20px !important;
+      h3 {
+        font-size: 24px !important;
+      }
+      p {
+        font-size: 16px !important;
+      }
+    }
+  }
+  .type {
+    .type_cards {
+      flex-direction: column !important;
+      align-items: center !important;
+
+      .type_card {
+        max-width: none !important;
+        width: 100% !important;
+        min-height: auto !important;
+        margin-bottom: 20px;
+        padding-left: 10% !important;
+        padding-right: 10% !important;
+        ul {
+          align-self: flex-start;
+        }
+      }
+    }
+  }
+  .team {
+    padding-bottom: 30px !important;
+  }
+  footer {
+    .footer_content {
+      flex-direction: column-reverse !important;
+      align-items: center;
+      .footer_text {
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 435px) {
+  header {
+    padding: 20px !important;
+    ul {
+      display: none !important;
+    }
+    .burger-icon {
+      display: flex !important;
+    }
+  }
+  body {
+    .main {
+      padding-top: 55vh;
+    }
+    .about {
+      padding-top: 20px;
+      flex-direction: column;
+      align-items: center;
+      .bg {
+        opacity: 0.1;
+      }
+      .about_image {
+        max-width: none;
+        margin-bottom: 20px;
+      }
+      .about_text {
+        max-width: none;
+      }
+    }
+    .type {
+      .container {
+        h2 {
+          text-align: center;
+          width: 70%;
+          font-size: 24px;
+        }
+      }
+    }
+    .main_content {
+      flex-direction: column !important;
+
+      h1 {
+        margin-bottom: 40px !important;
+      }
+      div {
+        max-width: 60% !important;
+      }
+    }
+    .practice {
+      .slides {
+        left: -300px;
+      }
+      .slider {
+        width: 300px;
+        height: 400px;
+        .wrapper {
+          width: 300px;
+          height: 400px;
+          .slide {
+            width: 300px;
+            height: 400px;
+          }
+        }
+      }
+
+      .practice_card {
+        align-items: center;
+        .description {
+          text-align: center;
+          font-size: 14px;
+        }
+      }
+      .value {
+        font-size: 20px !important;
+        text-align: center;
+        span::after {
+          content: "\A";
+          white-space: pre;
+        }
+      }
+    }
+    .team {
+      .team_cards {
+        .team_card {
+          flex-direction: column;
+          align-items: center;
+          .avatar {
+            background-color: #dcdbdb;
+            margin-bottom: 20px;
+          }
+          .personInfo {
+            max-width: none !important;
+          }
+        }
+      }
+    }
+  }
+  iframe {
+    width: 100% !important;
+    margin: 0 auto;
   }
 }
